fixed long subnav on mobile

--- a/source/stylesheets/blocks/_nav.scss
+++ b/source/stylesheets/blocks/_nav.scss
@@ -64,6 +64,12 @@
 }
 .nav-list-horz {
   flex-direction: row;
+  overflow-x: auto;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+  .nav-link {
+    white-space: nowrap;
+  }
 }
 .nav-list-vert {
   flex-direction: column;
