--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -76,6 +76,10 @@
     &.mobileMenuActive {
       overflow: hidden;
     }
+    &.index {
+      .block-footer {display: none}
+      .block-nav {margin-bottom: 0;}
+    }
   }
 
   .site-wrapper {
